--- a/src/components/home/style.css
+++ b/src/components/home/style.css
@@ -11,8 +11,8 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  margin: 0 auto;
-  padding: 10px;
+  margin-bottom: 20px;
+  padding: 0px;
   box-sizing: border-box;
 }
 
